--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,13 +6,71 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/mainLayout"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:orientation="horizontal"
+        android:weightSum="3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/tower1"
+            android:layout_width="0dp"
+            android:layout_height="180dp"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:background="@drawable/tower_shape"
+            android:gravity="bottom|center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="30dp">
+
+            <ImageView
+                android:id="@+id/redRing"
+                android:layout_width="60dp"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/red_ring" />
+
+            <ImageView
+                android:id="@+id/blueRing"
+                android:layout_width="80dp"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/blue_ring" />
+
+            <ImageView
+                android:id="@+id/orangeRing"
+                android:layout_width="100dp"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/orange_ring" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/tower2"
+            android:layout_width="0dp"
+            android:layout_height="180dp"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:background="@drawable/tower_shape"
+            android:gravity="bottom|center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="30dp"></LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/tower3"
+            android:layout_width="0dp"
+            android:layout_height="180dp"
+            android:layout_margin="3dp"
+            android:layout_weight="1"
+            android:background="@drawable/tower_shape"
+            android:gravity="bottom|center_horizontal"
+            android:orientation="vertical"
+            android:paddingBottom="30dp"></LinearLayout>
+    </LinearLayout>
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
